ROUNDSIG() Avoid inaccuracy of pow(10,negative) tdf#138220, tdf#105931 follow

https://bugs.documentfoundation.org/show_bug.cgi?id=138220#c6
(otherwise unrelated) has an example of
=RAWSUBTRACT(ROUNDSIG(-999.13;12);-999.13)
resulting in -0,00000000000011368684 instead of 0, due to these
0.1 ... inexact negative power of 10 values.

Change-Id: I82429f0871f1de35a7f2092708fc6b9c2e902999
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150438
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 397d12997a604730ad11316faa34cefd470ee0ff)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150618
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>